@@ -193,8 +193,8 @@ void convMxN::VoxelInit()
 
     //出力ガイドセルの設定
     int outGc=0;
-    if( m_param->Get_OutputGuideCell() > 1 ) outGc = m_param->Get_OutputGuideCell();
-    if( outGc > 1 ) {
+    if( m_param->Get_OutputGuideCell() > 0 ) outGc = m_param->Get_OutputGuideCell();
+    if( outGc > 0 ) {
       const cdm_FileInfo* DFI_FInfo = m_in_dfi[i]->GetcdmFileInfo();
       if( outGc > DFI_FInfo->GuideCell ) outGc=DFI_FInfo->GuideCell;
     }
@@ -378,7 +378,7 @@ bool convMxN::exec()
     int nVari = m_in_dfi[i]->GetNumVariables();
 
     int outGc=0;
-    if( m_param->Get_OutputGuideCell() > 1 ) outGc = m_param->Get_OutputGuideCell();
+    if( m_param->Get_OutputGuideCell() > 0 ) outGc = m_param->Get_OutputGuideCell();
     if( outGc > 0 ) {
       const cdm_FileInfo* DFI_FInfo = m_in_dfi[i]->GetcdmFileInfo();
       if( outGc > DFI_FInfo->GuideCell ) outGc = DFI_FInfo->GuideCell;
